--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Ignore Gradle project-specific cache directory
 .gradle
+**/build/
+!src/**/build/
 
-# Ignore Gradle build output directory
-build
+#  Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
