add IR_RPR2_0008 test case

--- a/RprBuilder/build.gradle
+++ b/RprBuilder/build.gradle
@@ -3,5 +3,5 @@ plugins {
     id 'rpr.library-conventions'
 }
 
-group = 'org.nato.ivct.rpr'
+group = 'org.nato.ivct.rpr.rprBuilder'
 version = '0.1-SNAPSHOT'
