--- a/buildSrc/src/main/groovy/rpr.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/rpr.java-conventions.gradle
@@ -1,14 +1,14 @@
 // Define Java conventions for this organization.
-// Projects need to use the Java, Checkstyle and Spotbugs plugins.
+// Projects need to use the Java, SLF for logging and jupiter for testing.
 
 plugins {
     id 'java'
 }
 
-// JDK Version Compatibility
-compileJava {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+// Java Version Compatibility
+java {
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
 }
 
 // Projects should use Maven Central for external dependencies
@@ -23,16 +23,14 @@ repositories {
 }
 
 dependencies {
-    // IVCT AbstractTestCase interface
-    implementation 'io.github.msg134:TC.lib:4.1.0-SNAPSHOT'
     // Use Simple Logging Facade API for reporting
     implementation 'org.slf4j:slf4j-api:2.0.5'
+    // For testing include the libraries which are added by TestEngine in operation
+    implementation 'ch.qos.logback:logback-classic:1.3.5'
     // implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	implementation files("$System.env.LRC_CLASSPATH")
 
-    // For testing include the libraries which are added by TestEngine in operation
     testImplementation 'ch.qos.logback:logback-classic:1.3.5'
-    // testImplementation('org.slf4j:slf4j-simple:2.0.5')
     // Use JUnit Jupiter for testing.
 	testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
 }
