--- a/buildSrc/src/main/groovy/rpr.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/rpr.java-conventions.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.5'
     // For testing include the libraries which are added by TestEngine in operation
     implementation 'ch.qos.logback:logback-classic:1.3.5'
-    // implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	implementation files("$System.env.LRC_CLASSPATH")
 
     testImplementation 'ch.qos.logback:logback-classic:1.3.5'
