simplify launch name

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
         },
         {
             "type": "java",
-            "name": "Launch AircraftApp",
+            "name": "Flyer1",
             "request": "launch",
             "mainClass": "org.nato.ivct.refFed.AircraftApp",
             "projectName": "RefFedAircraft",
