java version 9 required

--- a/buildSrc/src/main/groovy/rpr.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/rpr.java-conventions.gradle
@@ -7,8 +7,9 @@ plugins {
 
 // Java Version Compatibility
 java {
-    sourceCompatibility = "1.8"
-    targetCompatibility = "1.8"
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(9)
+    }
 }
 
 // Projects should use Maven Central for external dependencies
