--- a/buildSrc/src/main/groovy/rpr.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/rpr.java-conventions.gradle
@@ -29,6 +29,7 @@ dependencies {
     // For testing include the libraries which are added by TestEngine in operation
     implementation 'ch.qos.logback:logback-classic:1.3.5'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    // Include the patch to the installed RTI jar file
 	implementation files("$System.env.LRC_CLASSPATH")
 
     testImplementation 'ch.qos.logback:logback-classic:1.3.5'
