--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,10 +16,7 @@
             "request": "launch",
             "mainClass": "org.nato.ivct.refFed.AircraftApp",
             "projectName": "RefFedAircraft",
-            "args": ["-federateName", "Flyer1", "-provokeFlyAircraft"],
-            "env": {
-                "LRC_CLASSPATH" : "C:\\MAK\\makRti4.6\\lib\\hla.jar"
-            }
+            "args": ["-federateName", "Flyer1", "-provokeFlyAircraft"]
         }
     ]
 }
