RPR_Physical Testcase project added

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ rootProject.name = 'TS_RPR_FOM'
 include('RprBuilder')
 include('RPR_Entity')
 include('RPR_Warfare')
+include('RPR_Physical')
 include('RefFedAircraft')
