--- a/buildSrc/src/main/groovy/rpr.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/rpr.java-conventions.gradle
@@ -8,7 +8,7 @@ plugins {
 // Java Version Compatibility
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(9)
     }
 }
 
@@ -34,10 +34,9 @@ dependencies {
     // Include the patch to the installed RTI jar file
 	implementation files("$System.env.LRC_CLASSPATH")
 
-    testImplementation 'ch.qos.logback:logback-classic:1.3.5'
     // Use JUnit Jupiter for testing.
-	testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
-}
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.0-M1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'}
 
 test {
     useJUnitPlatform()
